// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Researcher IDs test Render the authors Researcher IDs as expected for a UQ researcher 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
    style="margin-top: 12px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="researcher-link"
        data-testid="researcher-link"
        href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
        id="researcher-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
          class="fez-icon researcher ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="scopus-link"
        data-testid="scopus-link"
        href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
        id="scopus-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Scopus ID is 35478294000 - Click to review"
          class="fez-icon scopus error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="google_scholar-link"
        data-testid="google_scholar-link"
        href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
        id="google_scholar-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
          class="fez-icon google_scholar error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="orcid-link"
        data-testid="orcid-link"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
          class="fez-icon orcid ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        aria-label="Click to visit your ORCID profile"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid"
        tabindex="0"
        target="_blank"
        title="Click to visit your ORCID profile"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
        >
           orcid.org/0000-0001-1111-1111
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Dashboard Researcher IDs test Testing auth internal links 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
    style="margin-top: 12px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="researcher-link"
        data-testid="researcher-link"
        href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
        id="researcher-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
          class="fez-icon researcher ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="scopus-link"
        data-testid="scopus-link"
        href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
        id="scopus-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Scopus ID is 35478294000 - Click to review"
          class="fez-icon scopus ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="google_scholar-link"
        data-testid="google_scholar-link"
        href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
        id="google_scholar-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
          class="fez-icon google_scholar ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-10b6o39"
        data-testid="orcid"
        id="orcid"
        tabindex="0"
        title="You are not linked to ORCID - Click for more information"
      >
        <div
          class="fez-icon orcid dashboard ok"
          title="You are not linked to ORCID - Click for more information"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Dashboard Researcher IDs test Testing clicking on ID internal links 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
    style="margin-top: 12px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="researcher-link"
        data-testid="researcher-link"
        href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
        id="researcher-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
          class="fez-icon researcher error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="scopus-link"
        data-testid="scopus-link"
        href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
        id="scopus-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Scopus ID is 35478294000 - Click to review"
          class="fez-icon scopus error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="google_scholar-link"
        data-testid="google_scholar-link"
        href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
        id="google_scholar-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
          class="fez-icon google_scholar error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-10b6o39"
        data-testid="orcid"
        id="orcid"
        tabindex="0"
        title="You are not linked to ORCID - Click for more information"
      >
        <div
          class="fez-icon orcid dashboard error"
          title="You are not linked to ORCID - Click for more information"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Dashboard Researcher IDs test Testing orcid caption 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
    style="margin-top: 12px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="researcher-link"
        data-testid="researcher-link"
        href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
        id="researcher-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
          class="fez-icon researcher ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="scopus-link"
        data-testid="scopus-link"
        href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
        id="scopus-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Scopus ID is 35478294000 - Click to review"
          class="fez-icon scopus ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="google_scholar-link"
        data-testid="google_scholar-link"
        href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
        id="google_scholar-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
          class="fez-icon google_scholar ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="orcid-link"
        data-testid="orcid-link"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
          class="fez-icon orcid ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        aria-label="Click to visit your ORCID profile"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid"
        tabindex="0"
        target="_blank"
        title="Click to visit your ORCID profile"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
        >
           orcid.org/0000-0001-1111-1111
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Dashboard Researcher IDs test should show orcid sync UI 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-7ldjcq-MuiGrid-root"
    style="margin-top: 12px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="researcher-link"
        data-testid="researcher-link"
        href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
        id="researcher-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
          class="fez-icon researcher ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="scopus-link"
        data-testid="scopus-link"
        href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
        id="scopus-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Scopus ID is 35478294000 - Click to review"
          class="fez-icon scopus error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="google_scholar-link"
        data-testid="google_scholar-link"
        href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
        id="google_scholar-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
          class="fez-icon google_scholar error"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        class="css-hi05s4"
        data-analyticsid="orcid-link"
        data-testid="orcid-link"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          aria-label="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
          class="fez-icon orcid ok"
          data-mui-internal-clone-element="true"
          style="width: 32px; height: 32px; border-radius: 32px;"
        />
      </a>
      <span
        class="css-1o7ot5c"
      >
        <button
          aria-label="Information about uploading your eSpace works to ORCID"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-hvz71z-MuiButtonBase-root-MuiIconButton-root"
          data-analyticsid="help-icon-orcid"
          data-mui-internal-clone-element="true"
          data-testid="help-icon-orcid"
          id="help-icon-orcid"
          tabindex="0"
          type="button"
        >
          <svg
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-pmbis9-MuiSvgIcon-root"
            data-testid="HelpOutlineIcon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
            />
            <title>
              Information about uploading your eSpace works to ORCID
            </title>
          </svg>
        </button>
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <a
        aria-label="Click to visit your ORCID profile"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid"
        tabindex="0"
        target="_blank"
        title="Click to visit your ORCID profile"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-is0946-MuiTypography-root"
        >
           orcid.org/0000-0001-1111-1111
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
